# chainer

./: .clang-format  .clang-tidy  .coveragerc  .gitignore  .mergify.yml  .pep8  .sync-config.cson  .travis.yml  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CPPLINT.cfg  CodeOfConduct.md  LICENSE.txt  MANIFEST.in  README.md  appveyor.yml  backend.h  chainer2019_bibtex.txt  chainer_setup_build.py  chainermn_bibtex.txt  chainerx.md  chainerx_build_helper.py  conftest.py  foo  guide.md  index.html  readthedocs.yml  setup.cfg  setup.py  test_threading.h  q!
chainerx/chainerx/native/: CMakeLists.txt  native_backend_test.cc  native_device.cc  native_device.h  native_device_test.cc  reduce.h  tensor_dot.cc
chainerx/chainerx/testing/: CMakeLists.txt  array.h  array_test.cc  gtest_main.cc  routines.cc  routines.h  threading.h  util.cc  util.h
chainerx/xchainer/cuda/: CMakeLists.txt  cast.cuh  cublas.cc  cublas.h  cuda.cc  cuda_backend.h  cuda_backend_test.cc  cuda_conv.cc  cuda_conv_test.cc  cuda_device.cc  cuda_device.h  cuda_device_test.cc  cuda_runtime.cc  cuda_runtime.h  cuda_runtime_test.cc  cudnn.cc  cudnn.h  elementwise.cuh  memory_pool.cc  memory_pool.h  memory_pool_test.cc  reduce.cuh
chainerx/xchainer/testing/: CMakeLists.txt  array.h  array_check.cc  array_test.cc  context_session.h  device_session.h  gtest_main.cc  routines.cc  routines_test.cc  threading.h  util.cc  util.h
chainerx_cc/: .clang-format  .clang-tidy  .coveragerc  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
chainerx_cc/chainerx/: CMakeLists.txt  array.cc  array.h  array_body.cc  array_body.h  array_body_leak_detection.cc  array_device_test.cc  array_index.cc  array_index.h  array_node.cc  array_node.h  array_repr.cc  array_repr_test.cc  array_test.cc  array_to_device_test.cc  axes.cc  axes.h  axes_test.cc  backend.cc  backend.h  backend_util.h  backprop_mode.cc  backprop_mode.h  backward.cc  backward.h  backward_builder.cc  backward_builder.h  backward_builder_test.cc  backward_context.cc  backward_context.h  backward_fwd.h  backward_test.cc  chainerx.h  check_backward.cc  check_backward.h  check_backward_test.cc  constant.h  context.cc  context.h  context_test.cc  (+66 more)
chainerx_cc/chainerx/backend_testdata/: CMakeLists.txt  backend0.cc  backend1.cc
chainerx_cc/chainerx/context_testdata/: CMakeLists.txt  backend0.cc  backend1.cc
chainerx_cc/chainerx/cuda/: CMakeLists.txt  cast.cuh  copy_data.cuh  cublas.cc  cublas.h  cuda.cc  cuda.h  cuda_backend.cc  cuda_backend.h  cuda_backend_test.cc  cuda_conv.cc  cuda_conv.h  cuda_conv_test.cc  cuda_device.cc  cuda_device.h  cuda_device_test.cc  cuda_rnn.cc  cuda_rnn.cu  cuda_rnn.h  cuda_runtime.cc  cuda_runtime.h  cuda_set_device_scope.h  cuda_set_device_scope_test.cc  cudnn.cc  cudnn.h  cusolver.cc  cusolver.h  data_type.cuh  elementwise.cuh  float16.cuh  index_iterator.cuh  indexer.h  kernel_regist.h  memory_pool.cc  memory_pool.h  memory_pool_test.cc  numeric.cuh  numeric_limits.cuh  op_regist.h  reduce.cuh
chainerx_cc/chainerx/kernels/: binary.cc  (+36 more)
chainerx_cc/cmake/: FindBLAS.cmake  FindCuDNN.cmake  clang-tidy.cmake  third-party.cmake
chainerx_cc/examples/: CMakeLists.txt
chainerx_cc/scripts/: run-clang-format.sh  run-clang-tidy.sh  run-cpplint.sh
chainerx_cc/tests/: cuda_utils.py
xchainer/: CMakeLists.txt  arithmetic_ops.h  array.cc  array.h  array_body.cc  array_body.h  array_body_leak_detection.cc  array_body_leak_detection.h  array_body_leak_detection_test.cc  array_body_test.cc  array_creation_test.cc  array_device_id_test.cc  array_device_test.cc  array_fill.cc  array_fill.h  array_fwd.h  array_index.h  array_math.cc  array_math.h  array_node.cc  array_node.h  array_repr.cc  array_repr.h  array_repr_test.cc  array_test.cc  array_to_device_test.cc  axes.cc  axes.h  axes_test.cc  axis.cc  axis.h  backend.cc  backend.h  backend_test.cc  backend_util.h  backprop.cc  backprop.h  backprop_mode.cc  backprop_mode.h  backprop_mode_test.cc  (+93 more)
xchainer/context_testdata/: backend0.cc  backend1.cc
xchainer/cuda/: CMakeLists.txt  array_fill.cu  array_fill.h  array_math.cu  array_math.h  cublas.cc  cublas.h  cuda.h  cuda_backend.cc  cuda_backend.cu  cuda_backend.h  cuda_backend_test.cc  cuda_conv.cc  cuda_conv.h  cuda_conv_test.cc  cuda_device.cc  cuda_device.cu  cuda_device.h  cuda_device_test.cc  cuda_runtime.cc  cuda_runtime.h  cuda_runtime_test.cc  cudnn.cc  cudnn.h  cudnn_conv.cc  cudnn_conv.h  elementwise.cuh  hash_combine.h  hello.cu  hello.h  hello_test.cc  memory_pool.cc  memory_pool.h  memory_pool_test.cc  reduce.cuh
xchainer/native/: CMakeLists.txt  col2im.cc  col2im.h  elementwise.h  im2col.cc  im2col.h  native_backend.cc  native_backend.h  native_backend_test.cc  native_device.cc  native_device.h  native_device_test.cc  reduce.h  tensor_dot.cc
xchainer/python/: CMakeLists.txt  __init__.py  array.cc  array.h  array_index.cc  array_index.h  axes.cc  axes.h  backend.cc  backend.h  backprop_mode.cc  backprop_mode.h  backward.cc  backward.h  check_backward.cc  check_backward.h  common.h  context.cc  context.h  core_module.cc  device.cc  device.h  device_id.cc  dtype.cc  dtype.h  error.cc  error.h  graph.cc  graph.h  routines.cc  routines.h  scalar.cc  scalar.h  shape.cc  shape.h  slice.cc  slice.h  stack_vector.h  strides.cc  strides.h
xchainer/routines/: CMakeLists.txt  connection.cc  connection.h  connection_test.cc  creation.cc  creation.h  creation_test.cc  ext.h  indexing.cc  indexing.h  indexing_test.cc  linalg.cc  linalg.h  linalg_test.cc  logic.cc  logic.h  logic_test.cc  manipulation.cc  manipulation.h  manipulation_test.cc  math.cc  math.h  math_test.cc  normalization.cc  normalization.h  normalization_test.cc  pooling.cc  pooling.h  pooling_test.cc  routines_util.h  sorting.cc  sorting.h  sorting_test.cc  statistics.cc  statistics.h  statistics_test.cc  util.cc  util.h  util_test.cc
xchainer/testing/: CMakeLists.txt  array.h  array_check.cc  array_check.h  array_test.cc  device_session.h  gtest_main.cc  numeric.cc  numeric.h  numeric.test.cc  numeric_test.cc  routines.cc  routines.h  routines_test.cc  threading.h  util.cc  util.h
(+2798 files in other folders)
